k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-db
  template:
    metadata:
      labels:
        app: crud-db
    spec:
      containers:
      - name: crud-db
        image: mariadb:11
        ports:
        - containerPort: 3306
volumeMounts:
  - name: mariadb-storage
    mountPath: /var/lib/mysql

volumes:
  - name: mariadb-storage
    persistentVolumeClaim:
      claimName: mariadb-pvc
