k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app
spec:
  selector:
    app: crud-app
  ports:
  - port: 8080
    targetPort: 8080
