k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-db
spec:
  selector:
    app: crud-db
  ports:
  - port: 3306
    targetPort: 3306
